[package]
name = "crsql_automigrate_core"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wonlaw"]
keywords = ["sqlite", "cr-sqlite"]
license = "Apache 2"

[lib]
name = "crsql_automigrate_core"
crate-type = ["rlib"]

[dependencies]
sqlite_nostd = { path="../../deps/sqlite-rs-embedded/sqlite_nostd"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "wasm32-unknown-emscripten"

[features]
omit_load_extension = ["sqlite_nostd/omit_load_extension"]
