[package]
name = "crsql_automigrate_native"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wonlaw"]
keywords = ["sqlite", "cr-sqlite"]
license = "Apache 2"

[lib]
name = "crsql_automigrate_native"
crate-type = ["staticlib"]

# "cdylib" <-- only enable cdylib if omit_load_extension is not enabled

[dependencies]
crsql_automigrate_core = {path="../automigrate-core"}

[features]
omit_load_extension = ["crsql_automigrate_core/omit_load_extension"]
