[package]
name = "crsql_automigrate_web"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wonlaw"]
keywords = ["sqlite", "cr-sqlite"]
license = "Apache 2"

[lib]
name = "crsql_automigrate_web"
crate-type = ["cdylib"]

[dependencies]
crsql_automigrate_core = {path="../automigrate-core"}
sqlite_web = { path="../../deps/sqlite-rs-embedded/sqlite_web"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "wasm32-unknown-emscripten"
